# my-demo

./: README.md  pyproject.toml  requirements.txt  run_e2e_testing.sh  test_1.py  test_playwright.py
.github/workflows/: ci.yml  github-actions-demo.yml  test-badge.yml  test-prod-tag.yml  test-report.yml  test-steps-failure.yml  test_badge.yml  test_docker_args.yml  test_playwright_container.yml  test_redirect_url.yml  test_report.yml  test_runner.yml  test_trigger_mr.yml
docker/: Dockerfile
tests/: test_1.py
