[tool.poetry]
name = "my-demo"
version = "0.1.0"
description = ""
authors = ["Sycat Tseng"]
readme = "README.md"
packages = [{include = "my_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest-playwright = "^0.3.3"
pytest-html = "^3.2.0"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = """\
    --html=outputs/test_report.html \
    --self-contained-html \
    --junitxml=outputs/test_report.xml \
    """
testpaths = [
    "tests",
]
markers = [
    "facebook",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
