[tool.poetry]
name = "my-demo"
version = "0.1.0"
description = ""
authors = ["Sycat Tseng"]
readme = "README.md"
packages = [{include = "my_demo"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest-html = "^4.0.2"
pytest-playwright = "^0.5.0"
yopmail = "^1.9"
playwright = "^1.44.0"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = """\
    --html=outputs/test_report.html \
    --self-contained-html \
    --junitxml=outputs/test_report.xml \
    """
testpaths = [
    "tests",
]
markers = [
    "dev",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
